--- a/app/globals.css
+++ b/app/globals.css
@@ -12,6 +12,7 @@
 body {
   color: rgb(var(--foreground-rgb));
   min-height: 100vh;
+  text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: transparent;
 }
